--- a/app/main.kv
+++ b/app/main.kv
@@ -41,3 +41,9 @@
 				pos_hint: {"center_x": 0.5, "center_y": 0.4}
 				disabled: True 
 				on_release: app.load_on_device()
+
+			MDSpinner:
+				size_hint: None, None
+				size: dp(46), dp(46)
+				pos_hint: {'center_x': .5, 'center_y': .2}
+				active: True
