--- a/app/main.kv
+++ b/app/main.kv
@@ -43,7 +43,8 @@
 				on_release: app.load_on_device()
 
 			MDSpinner:
+				id: loader_spinner
 				size_hint: None, None
 				size: dp(46), dp(46)
 				pos_hint: {'center_x': .5, 'center_y': .2}
-				active: True
+				active: False
