--- a/app/main.kv
+++ b/app/main.kv
@@ -48,3 +48,10 @@
 				size: dp(46), dp(46)
 				pos_hint: {'center_x': .5, 'center_y': .2}
 				active: False
+
+			MDLabel:
+				id: exitus
+				font_style: 'H3'
+				text: ""
+				halign: "center"
+				pos_hint: {"center_x": 0.5, "center_y": 0.1}
